--- a/gentle_client/index.html
+++ b/gentle_client/index.html
@@ -11,7 +11,7 @@
   </body>
   <script>
       window.config = {
-        Host: "localhost:3000",
+        Host: "47.103.217.35:3000",
       }
   </script>
 </html>
