1、新增“会员中心”

--- a/gentle_client/index.html
+++ b/gentle_client/index.html
@@ -12,6 +12,7 @@
   <script>
       window.config = {
         Host: "47.103.217.35:3000",
+        //Host: "localhost:3000",
       }
   </script>
 </html>
